Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15408

Confusing error message upon ER_VERS_FIELD_WRONG_TYPE while omitting UNSIGNED in BIGINT

    XMLWordPrintable

Details

    Description

      bb-10.3-release 9b59f78d16fb000ad

      MariaDB [test]> create or replace table t3( id int, row_start bigint as row start, row_end bigint as row end, period for system_time (row_start, row_end) ) with system versioning;
      ERROR 4108 (HY000): `row_start` must be of type TIMESTAMP(6) for system-versioned table `t3`
      

      It took me a while to figure why it wasn't accepting my explicitly defined BIGINT and insisting on TIMESTAMP instead; it turns out that I've actually missed UNSIGNED. While I understand that the server can't guess what the user implied, maybe it could be made better somehow.

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.25h
                  6.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.